--- a/package.json
+++ b/package.json
@@ -14,15 +14,24 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@googlemaps/js-api-loader": "^1.16.2",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@teamhanko/hanko-elements": "^0.9.1",
 		"@types/eslint": "8.56.0",
+		"autoprefixer": "^10.4.17",
 		"eslint": "^8.56.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"flowbite": "^2.2.1",
+		"flowbite-svelte": "^0.44.22",
+		"jose": "^5.2.0",
+		"postcss": "^8.4.33",
+		"postcss-load-config": "^5.0.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
