--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"flowbite": "^2.2.1",
 		"flowbite-svelte": "^0.44.22",
+		"flowbite-svelte-icons": "^1.3.1",
 		"jose": "^5.2.0",
+		"jwt-decode": "^4.0.0",
 		"postcss": "^8.4.33",
 		"postcss-load-config": "^5.0.2",
 		"svelte": "^4.2.7",
